tests/baselines/reference/restParamAsOptional.errors.txt
==== tests/cases/compiler/restParamAsOptional.ts (2 errors) ====
    function f(...x?) { }
               ~~~~~
!!! restParamAsOptional.ts(1,12): error TS1047: A rest parameter cannot be optional.
    function f2(...x = []) { }
                ~~~~~~~~~
!!! restParamAsOptional.ts(2,13): error TS1048: A rest parameter cannot have an initializer.